--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.sqlite3
+*.log
+
+
 # Distribution / packaging
 .Python
 build/
